syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.proto.base";
option java_outer_classname = "ServiceBaseInfo";

message HelloRequest{
    string name = 1;
}

message HelloReply{
    string message = 1;
}